@@ -1,3 +1,7 @@
+2018-12-05  Ben Elliston  <bje@gnu.org>
+
+	* testsuite/runtest.all/utils.test: Test diff.
+
 2018-12-04  Ben Elliston  <bje@gnu.org>
 
 	* testsuite/runtest.all/utils.test: Test grep.
